pic32c-source/XC32-arm-gcc/gcc/gcc/testsuite/gcc.target/pic32c/opt-msmart-io-2.c
/* { dg-do compile */
/* { dg-options "-mno-smart-io -msmart-io=0" } */
/* { dg-error "mno-smart-io" "" { target *-*-* } 0 } */

